[tool.poetry]
name = "first-project"
version = "0.1.0"
description = ""
authors = ["Rodolfo Arruda <rarruda@usp.br>"]
readme = "README.md"
packages = [{include = "first_project"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
